--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   "private": true,
   "workspaces": [
     "packages/*"
-  ],
-  "browserslist": "last 2 versions, ie 6-8, ie 10",
-  "repository": "https://github.com/QasirID/Qasir-React-Boilerplate",
+  ],    
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lerna-init": "lerna init",
@@ -132,5 +130,6 @@
     "rxjs": "^6.3.2",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.2"
-  }
+  },
+  "repository": "https://github.com/QasirID/Qasir-React-Boilerplate"
 }
