--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "clean": "lerna clean",
     "serve-dev": "APP_ENV=local NODE_ENV=development nodemon ./packages/server/index.js",
     "serve": "NODE_ENV=production node ./packages/server/index.js",
-    "dev": "cross-env APP_ENV=local NODE_ENV=development webpack --config ./webpack.config.local.js",
+    "dev": "cross-env APP_ENV=local NODE_ENV=development webpack --watch --config ./webpack.dev.js",
     "build-local": "cross-env APP_ENV=local NODE_ENV=production webpack --config ./webpack.config.dev.js",
-    "build-dev": "cross-env APP_ENV=staging NODE_ENV=production webpack --config ./webpack.production.js",
-    "build": "cross-env APP_ENV=production NODE_ENV=production webpack --config ./webpack.production.js"
+    "build-dev": "cross-env APP_ENV=staging NODE_ENV=production webpack --config ./webpack.prod.js",
+    "build": "cross-env APP_ENV=production NODE_ENV=production webpack --config ./webpack.prod.js"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.44",
