--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": true,
   "workspaces": [
     "packages/*"
-  ],    
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lerna-init": "lerna init",
@@ -27,6 +27,8 @@
     "@babel/plugin-proposal-export-default-from": "^7.0.0-beta.44",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-arrow-functions": "^7.2.0",
+    "@babel/plugin-transform-block-scoping": "^7.4.4",
     "@babel/plugin-transform-react-jsx": "^7.0.0-beta.44",
     "@babel/plugin-transform-runtime": "^7.0.0-beta.44",
     "@babel/polyfill": "^7.4.3",
@@ -48,6 +50,7 @@
     "nodemon": "^1.18.4",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "prettier": "^1.5.3",
+    "prop-types": "^15.7.2",
     "querystring": "^0.2.0",
     "react-dnd": "^2.6.0",
     "react-dnd-html5-backend": "^2.6.0",
@@ -56,11 +59,11 @@
     "redux-logger": "^3.0.1",
     "sass-loader": "^7.0.1",
     "terser-webpack-plugin": "^1.1.0",
-    "uglifyjs-webpack-plugin": "^2.0.1"
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.5"
   },
   "dependencies": {
-    "@babel/plugin-transform-arrow-functions": "^7.2.0",
-    "@babel/plugin-transform-block-scoping": "^7.4.0",
     "@qasir/qasir-components": "^1.0.0",
     "@rowno/sparkline": "^3.0.1",
     "ajv": "^6.5.0",
@@ -91,7 +94,6 @@
     "moment-timezone": "^0.5.14",
     "peity-react": "^0.0.7",
     "popper.js": "^1.14.3",
-    "prop-types": "^15.5.10",
     "rc-drawer": "^1.4.4",
     "react": "^16.4.0",
     "react-alertify-js": "^0.0.1",
@@ -127,9 +129,7 @@
     "redux-act": "^1.3.0",
     "redux-thunk": "^2.2.0",
     "reqwest": "^2.0.5",
-    "rxjs": "^6.3.2",
-    "webpack": "^4.19.1",
-    "webpack-cli": "^3.1.2"
+    "rxjs": "^6.3.2"
   },
   "repository": "https://github.com/QasirID/Qasir-React-Boilerplate"
 }
