--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-arrow-functions": "^7.2.0",
-    "@babel/plugin-transform-block-scoping": "^7.4.4",
+    "@babel/plugin-transform-block-scoping": "^7.4.0",
     "@babel/plugin-transform-react-jsx": "^7.0.0-beta.44",
     "@babel/plugin-transform-runtime": "^7.0.0-beta.44",
     "@babel/polyfill": "^7.4.3",
@@ -60,8 +60,9 @@
     "sass-loader": "^7.0.1",
     "terser-webpack-plugin": "^1.1.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.5"
+    "webpack": "^4.19.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "dependencies": {
     "@qasir/qasir-components": "^1.0.0",
