--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lerna-init": "lerna init",
     "lerna-bootstrap": "lerna bootstrap",
     "clean": "lerna clean",
+    "lint": "eslint --ext .js --ext .jsx .",
     "serve-dev": "APP_ENV=local NODE_ENV=development nodemon ./packages/server/index.js",
     "serve": "NODE_ENV=production node ./packages/server/index.js",
     "dev": "cross-env APP_ENV=local NODE_ENV=development webpack --watch --config ./webpack.dev.js",
@@ -36,11 +37,20 @@
     "@babel/preset-react": "^7.0.0-beta.44",
     "@babel/preset-stage-0": "^7.0.0",
     "@babel/runtime": "^7.0.0-beta.44",
-    "babel-eslint": "7.2.0",
+    "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.0-beta",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "clean-webpack-plugin": "^1.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^2.0.0",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
