update pwa config

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,11 @@ API_HOST=http://localhost:7070
 API_ENDPOINT=/api
 REDIS_HOST=
 WEB_API_KEY=
+API_KEY_MAPS=
 DB_HOST=
 DB_USERNAME=
 DB_PASSWORD=
 DB_DATABASE=
+
+## PWA 
+PWA=false
