--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,6 +6,6 @@
     "license": "MIT",
     "dependencies": {
         "@qasir/store": "1.0.0",
-        "@qasir/routes": "1.0.0"        
+        "@qasir/components": "1.0.0"        
     }
 }
