--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.2",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-manifest-plugin": "^2.0.4"
   },
   "dependencies": {
     "@qasir/qasir-components": "^1.0.0",
