--- a/.eslintrc
+++ b/.eslintrc
@@ -4,15 +4,24 @@
     "eslint:recommended",
     "plugin:react/recommended"
   ],
+  "env": {
+    "es6": true,
+    "browser": true,
+    "node": true,
+    "mocha": true
+  },
   "parser": "babel-eslint",
   "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
     "ecmaFeatures": {
       "jsx": true
     }
   },
   "rules": {
     "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": "error"
+    "react/jsx-uses-vars": "error",
+    "no-unused-vars": 0
   },
   "settings": {
     "react": {
