--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lerna-init": "lerna init",
     "lerna-bootstrap": "lerna bootstrap",
     "clean": "lerna clean",
-    "lint": "eslint --ext .js --ext .jsx .",
+    "lint": "esw --ext .js --ext .jsx . --watch --color",
     "serve-dev": "APP_ENV=local NODE_ENV=development nodemon ./packages/server/index.js",
     "serve": "NODE_ENV=production node ./packages/server/index.js",
     "dev": "cross-env APP_ENV=local NODE_ENV=development webpack --watch --config ./webpack.dev.js",
@@ -52,6 +52,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-standard": "^4.0.0",
+    "eslint-watch": "^5.1.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
