--- a/packages/views/example/package.json
+++ b/packages/views/example/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@qasir/example",
+    "name": "@qasir/views/example",
     "version": "1.0.0",
     "main": "index.js",
     "author": "Qasir Development Team <dev@qasir.id>",
