--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,20 @@
-## perubahan via repository ##
-APP_PORT=7349
-DB_PORT=3306
-REDIS_PORT=6379
-REDIS_DB=11
-
-## perubahan via jenkins ##
-APP_ENV=local
-NODE_ENV=development
-API_HOST=http://localhost:7070
-API_ENDPOINT=/api
-REDIS_HOST=
+## Application ##
+APP_ENV=
+APP_PORT=
+NODE_ENV=
+API_HOST=
+API_ENDPOINT= 
 WEB_API_KEY=
-API_KEY_MAPS=
+
+## Database ##
 DB_HOST=
 DB_USERNAME=
 DB_PASSWORD=
+DB_PORT=
 DB_DATABASE=
 
-## PWA 
-PWA=false
+## Redis ##
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASSWORD=
+REDIS_DB=
