--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lerna:init": "lerna init",
     "lerna:bootstrap": "lerna bootstrap",
-    "clean": "lerna clean",
+    "lerna:clean": "lerna clean",
     "lint": "esw --ext .js --ext .jsx . --watch --color",
+    "dev": "cross-env APP_ENV=local NODE_ENV=development webpack --watch --config ./webpack.dev.js",
     "serve:dev": "APP_ENV=local NODE_ENV=development nodemon ./packages/server/index.js",
     "serve": "NODE_ENV=production node ./packages/server/index.js",
-    "dev": "cross-env APP_ENV=local NODE_ENV=development webpack --watch --config ./webpack.dev.js",
     "build:local": "cross-env APP_ENV=local NODE_ENV=production webpack --config ./webpack.prod.local.js",
     "build:dev": "cross-env APP_ENV=staging NODE_ENV=production webpack --config ./webpack.prod.js",
     "build:sw": "cross-env APP_ENV=production NODE_ENV=production webpack --config ./webpack.prod.sw.js",
