--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lerna:bootstrap": "lerna bootstrap",
     "lerna:clean": "lerna clean",
     "lint": "esw --ext .js --ext .jsx . --watch --color",
-    "dev": "cross-env APP_ENV=local NODE_ENV=development webpack --watch --config ./webpack.dev.js",    
+    "dev": "cross-env APP_ENV=local NODE_ENV=development webpack --watch --config ./webpack.dev.js",
     "bundle:report": "cross-env APP_ENV=production NODE_ENV=production webpack --config ./webpack.report.js",
     "build:local": "cross-env APP_ENV=local NODE_ENV=production webpack --config ./webpack.prod.local.js",
     "build:dev": "cross-env APP_ENV=staging NODE_ENV=production webpack --config ./webpack.prod.js",
@@ -41,6 +41,7 @@
     "@babel/runtime": "^7.0.0-beta.44",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.0-beta",
+    "babel-plugin-import": "^1.12.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "clean-webpack-plugin": "^1.0.0",
@@ -58,6 +59,7 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
     "image-webpack-loader": "^4.2.0",
+    "less-loader": "^5.0.0",
     "lint-staged": "^4.0.2",
     "node-sass": "^4.9.0",
     "nodemon": "^1.18.4",
@@ -147,7 +149,9 @@
     "redux-act": "^1.3.0",
     "redux-thunk": "^2.2.0",
     "reqwest": "^2.0.5",
-    "rxjs": "^6.3.2"
+    "rxjs": "^6.3.2",
+    "styled-components": "^4.3.2",
+    "styled-reset": "^4.0.0"
   },
   "repository": "https://github.com/QasirID/Qasir-React-Boilerplate"
 }
