--- a/package.json
+++ b/package.json
@@ -150,8 +150,7 @@
     "redux-thunk": "^2.2.0",
     "reqwest": "^2.0.5",
     "rxjs": "^6.3.2",
-    "styled-components": "^4.3.2",
-    "styled-reset": "^4.0.0"
+    "styled-components": "^4.3.2"
   },
   "repository": "https://github.com/QasirID/Qasir-React-Boilerplate"
 }
