--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,27 @@
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
 node_modules
-.vscode
-package-lock.json
-*.log
-.env
-dist/
-build/
-*.DS_Store
+
+# testing
+/coverage
+
+# development
 public/
+
+# production
+/build
+dist/
+
+# misc
+*.DS_Store
+.vscode
+.idea
+*.log
+package-lock.json
+yarn.lock
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
