--- a/package.json
+++ b/package.json
@@ -85,49 +85,30 @@
   },
   "dependencies": {
     "@qasir/qasir-components": "^1.0.0",
-    "@rowno/sparkline": "^3.0.1",
     "ajv": "^6.5.0",
     "antd": "^3.5.3",
     "axios": "^0.18.0",
-    "bootstrap": "^4.1.1",
-    "chart.js": "^2.7.2",
-    "chartist": "^0.10.1",
-    "chartist-plugin-tooltip": "^0.0.11",
     "classnames": "^2.2.5",
+    "core-js": "^3.2.1",
     "cross-env": "^5.1.4",
     "d3-dsv": "^1.0.8",
     "d3-format": "^1.2.1",
     "d3-scale": "^1.0.7",
     "d3-time-format": "^2.1.1",
     "dotenv": "6.0.0",
-    "draft-js": "^0.10.5",
     "enquire-js": "^0.2.1",
     "fetch-jsonp": "^1.1.3",
     "fingerprintjs": "^0.5.3",
     "immutability-helper": "^2.7.0",
     "immutable": "^3.8.2",
-    "jquery": "^3.3.1",
     "lerna": "^3.15.0",
     "lodash": "^4.17.10",
     "mini-css-extract-plugin": "^0.4.0",
     "moment": "^2.19.3",
     "moment-timezone": "^0.5.14",
-    "peity-react": "^0.0.7",
-    "popper.js": "^1.14.3",
-    "rc-drawer": "^1.4.4",
     "react": "^16.4.0",
-    "react-alertify-js": "^0.0.1",
-    "react-avatar-editor": "^10.2.1",
-    "react-c3js": "^0.1.20",
-    "react-chartist": "^0.13.1",
-    "react-chartjs-2": "^2.7.0",
-    "react-code-input": "^3.8.1",
-    "react-container-query": "^0.11.0",
-    "react-copy-to-clipboard": "^5.0.1",
-    "react-custom-scrollbars": "^4.2.1",
+    "react-app-polyfill": "^1.0.2",
     "react-dom": "^16.4.0",
-    "react-draft-wysiwyg": "^1.12.13",
-    "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.0",
     "react-infinite-scroller": "^1.2.4",
     "react-loadable": "^5.4.0",
@@ -138,12 +119,6 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.6",
-    "react-select": "^2.1.0",
-    "react-stockcharts": "^0.7.0-beta.22",
-    "react-swipeable-views": "^0.13.1",
-    "react-syntax-highlighter": "^7.0.4",
-    "react-transition-group": "^2.3.1",
-    "react-virtualized": "^9.18.5",
     "recompose": "^0.30.0",
     "redux": "^3.7.2",
     "redux-act": "^1.3.0",
