--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint": "esw --ext .js --ext .jsx . --watch --color",
     "dev": "cross-env APP_ENV=local NODE_ENV=development webpack --watch --config ./webpack.dev.js",
     "bundle:report": "cross-env APP_ENV=production NODE_ENV=production webpack --config ./webpack.report.js",
+    "build:clean": "rm -rf ./build/",
     "build:local": "cross-env APP_ENV=local NODE_ENV=production webpack --config ./webpack.prod.local.js",
     "build:dev": "cross-env APP_ENV=staging NODE_ENV=production webpack --config ./webpack.prod.js",
     "build:sw": "cross-env APP_ENV=production NODE_ENV=production webpack --config ./webpack.prod.sw.js",
@@ -26,7 +27,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.44",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-export-default-from": "^7.0.0-beta.44",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
@@ -41,6 +42,7 @@
     "@babel/runtime": "^7.0.0-beta.44",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.0-beta",
+    "babel-plugin-dynamic-import-node": "^2.3.0",
     "babel-plugin-import": "^1.12.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-assign": "^6.22.0",
@@ -111,7 +113,7 @@
     "react-dom": "^16.4.0",
     "react-helmet": "^5.2.0",
     "react-infinite-scroller": "^1.2.4",
-    "react-loadable": "^5.4.0",
+    "react-loadable": "^5.5.0",
     "react-number-format": "^4.0.7",
     "react-redux": "^5.0.7",
     "react-redux-spinner": "^1.1.3",
