--- a/packages/views/contents/user-management/package.json
+++ b/packages/views/contents/user-management/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@qasir/views/dashboard",
+    "name": "@qasir/views/contents/user-management",
     "version": "1.0.0",
     "main": "index.js",
     "author": "Qasir Development Team <dev@qasir.id>",
