--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "dev": "cross-env APP_ENV=local NODE_ENV=development webpack --watch --config ./webpack.dev.js",
     "bundle:report": "cross-env APP_ENV=production NODE_ENV=production webpack --config ./webpack.report.js",
     "build:clean": "rm -rf ./build/",
-    "build:local": "cross-env APP_ENV=local NODE_ENV=production webpack --config ./webpack.prod.local.js",
-    "build:dev": "cross-env APP_ENV=staging NODE_ENV=production webpack --config ./webpack.prod.js",
-    "build:sw": "cross-env APP_ENV=production NODE_ENV=production webpack --config ./webpack.prod.sw.js",
-    "build": "cross-env APP_ENV=production NODE_ENV=production webpack --config ./webpack.prod.js",
+    "build:local": "npm run build:clean && cross-env APP_ENV=local NODE_ENV=production webpack --config ./webpack.prod.local.js",
+    "build:dev": "npm run build:clean && cross-env APP_ENV=staging NODE_ENV=production webpack --config ./webpack.prod.js",
+    "build:sw": "npm run build:clean && cross-env APP_ENV=production NODE_ENV=production webpack --config ./webpack.prod.sw.js",
+    "build": "npm run build:clean && cross-env APP_ENV=production NODE_ENV=production webpack --config ./webpack.prod.js",
     "serve:dev": "APP_ENV=local NODE_ENV=development nodemon ./packages/server/index.js",
     "serve": "NODE_ENV=production node ./packages/server/index.js"
   },
@@ -103,7 +103,7 @@
     "fingerprintjs": "^0.5.3",
     "immutability-helper": "^2.7.0",
     "immutable": "^3.8.2",
-    "lerna": "^3.15.0",
+    "lerna": "^3.16.4",
     "lodash": "^4.17.10",
     "mini-css-extract-plugin": "^0.4.0",
     "moment": "^2.19.3",
@@ -113,7 +113,6 @@
     "react-dom": "^16.4.0",
     "react-helmet": "^5.2.0",
     "react-infinite-scroller": "^1.2.4",
-    "react-loadable": "^5.5.0",
     "react-number-format": "^4.0.7",
     "react-redux": "^5.0.7",
     "react-redux-spinner": "^1.1.3",
