adding login page

--- a/packages/styles/colors/package.json
+++ b/packages/styles/colors/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@qasir/styles",
+    "name": "@qasir/styles/colors",
     "version": "1.0.0",
     "main": "index.js",
     "author": "Qasir Development Team <dev@qasir.id>",
-    "license": "MIT"    
+    "license": "MIT"
 }
