--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "mini-css-extract-plugin": "^0.4.0",
     "moment": "^2.19.3",
     "moment-timezone": "^0.5.14",
+    "polished": "^3.4.1",
     "react": "^16.4.0",
     "react-app-polyfill": "^1.0.2",
     "react-dom": "^16.4.0",
