--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,55 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
-# dependencies
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Dependencies
 node_modules
 
-# testing
+# Testing
 /coverage
 
-# development
+# Development
 public/
 
-# production
+# Production
 /build
 dist/
 
-# misc
+# Editors
 *.DS_Store
 .vscode
 .idea
-*.log
+
+# Packages lock
 package-lock.json
 yarn.lock
+
+# Dotenv environment variables file
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
