--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "lerna:clean": "lerna clean",
     "linter": "esw --ext .js --ext .jsx packages --watch --color --ignore-path .gitignore --cache",
     "dev": "npm-run-all --parallel serve:dev client",
-    "client": "cross-env APP_ENV=local NODE_ENV=development webpack --progress --watch --config ./webpack.dev.js",
+    "client": "cross-env NODE_ENV=development webpack --progress --watch --config ./webpack.dev.js",
     "bundle:report": "cross-env APP_ENV=production NODE_ENV=production webpack --progress --config ./webpack.report.js",
     "build:clean": "rm -rf ./build/",
     "build:local": "npm run build:clean && cross-env APP_ENV=local NODE_ENV=production webpack --progress --config ./webpack.prod.local.js",
     "build:dev": "npm run build:clean && cross-env APP_ENV=staging NODE_ENV=production webpack --progress --config ./webpack.prod.js",
     "build:sw": "npm run build:clean && cross-env APP_ENV=production NODE_ENV=production webpack --progress --config ./webpack.prod.sw.js",
     "build": "npm run build:clean && cross-env APP_ENV=production NODE_ENV=production webpack --progress --config ./webpack.prod.js",
-    "serve:dev": "APP_ENV=local NODE_ENV=development nodemon ./packages/server/index.js",
+    "serve:dev": "NODE_ENV=development nodemon ./packages/server/index.js",
     "serve": "NODE_ENV=production node ./packages/server/index.js"
   },
   "devDependencies": {
@@ -43,9 +43,8 @@
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.0.0-beta.44",
     "@babel/preset-stage-0": "^7.0.0",
+    "@babel/register": "^7.6.0",
     "@babel/runtime": "^7.0.0-beta.44",
-    "@loadable/babel-plugin": "^5.10.0",
-    "@loadable/webpack-plugin": "^5.7.1",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.0-beta",
     "babel-plugin-dynamic-import-node": "^2.3.0",
@@ -97,7 +96,6 @@
   },
   "dependencies": {
     "@loadable/component": "^5.10.2",
-    "@loadable/server": "^5.10.2",
     "@qasir/qasir-components": "^1.0.0",
     "ajv": "^6.5.0",
     "antd": "^3.5.3",
