#19 add i18n, add webpack settings to copy translation files

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "clean-webpack-plugin": "^1.0.0",
+    "copy-webpack-plugin": "^5.1.1",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-loader": "^2.1.2",
@@ -111,9 +112,12 @@
     "enquire-js": "^0.2.1",
     "fetch-jsonp": "^1.1.3",
     "fingerprintjs": "^0.5.3",
+    "i18next": "^19.0.0",
+    "i18next-browser-languagedetector": "^4.0.1",
+    "i18next-xhr-backend": "^3.2.2",
     "immutability-helper": "^2.7.0",
     "immutable": "^3.8.2",
-    "lerna": "^3.16.4",
+    "lerna": "^3.18.4",
     "lodash": "^4.17.10",
     "mini-css-extract-plugin": "^0.4.0",
     "moment": "^2.19.3",
@@ -124,6 +128,7 @@
     "react-app-polyfill": "^1.0.2",
     "react-dom": "^16.4.0",
     "react-helmet": "^5.2.0",
+    "react-i18next": "^11.2.2",
     "react-infinite-scroller": "^1.2.4",
     "react-number-format": "^4.0.7",
     "react-redux": "^5.0.7",
