--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "packages/*"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "test:coverage": "jest --coverage",
     "lerna:init": "lerna init",
     "lerna:bootstrap": "lerna bootstrap",
     "lerna:clean": "lerna clean",
@@ -28,24 +30,25 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.6.0",
-    "@babel/core": "^7.0.0-beta.44",
+    "@babel/core": "^7.8.4",
     "@babel/node": "^7.6.1",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-export-default-from": "^7.0.0-beta.44",
+    "@babel/plugin-proposal-export-default-from": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-arrow-functions": "^7.2.0",
     "@babel/plugin-transform-block-scoping": "^7.4.0",
-    "@babel/plugin-transform-react-jsx": "^7.0.0-beta.44",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.44",
+    "@babel/plugin-transform-react-jsx": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/polyfill": "^7.4.3",
-    "@babel/preset-env": "^7.0.0-beta.44",
+    "@babel/preset-env": "^7.8.4",
     "@babel/preset-es2015": "^7.0.0-beta.53",
-    "@babel/preset-react": "^7.0.0-beta.44",
+    "@babel/preset-react": "^7.8.3",
     "@babel/preset-stage-0": "^7.0.0",
     "@babel/register": "^7.6.0",
-    "@babel/runtime": "^7.0.0-beta.44",
+    "@babel/runtime": "^7.8.4",
     "babel-eslint": "^10.0.2",
+    "babel-jest": "~23.4.2",
     "babel-loader": "^8.0.0-beta",
     "babel-plugin-dynamic-import-node": "^2.3.0",
     "babel-plugin-import": "^1.12.1",
@@ -53,6 +56,8 @@
     "babel-plugin-transform-object-assign": "^6.22.0",
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^5.1.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-loader": "^2.1.2",
@@ -67,7 +72,10 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
+    "identity-obj-proxy": "^3.0.0",
     "image-webpack-loader": "^4.2.0",
+    "jest": "^25.1.0",
+    "jest-environment-jsdom": "^25.1.0",
     "less-loader": "^5.0.0",
     "lint-staged": "^4.0.2",
     "node-sass": "^4.9.0",
