--- a/package.json
+++ b/package.json
@@ -21,36 +21,36 @@
     "client": "cross-env NODE_ENV=development webpack --progress --watch --config ./webpack.dev.js",
     "bundle:report": "cross-env APP_ENV=production NODE_ENV=production webpack --progress --config ./webpack.report.js",
     "build:clean": "rm -rf ./build/",
-    "build:local": "npm run build:clean && cross-env APP_ENV=local NODE_ENV=production webpack --progress --config ./webpack.prod.local.js",
-    "build:dev": "npm run build:clean && cross-env APP_ENV=staging NODE_ENV=production webpack --progress --config ./webpack.prod.js",
-    "build:sw": "npm run build:clean && cross-env APP_ENV=production NODE_ENV=production webpack --progress --config ./webpack.prod.sw.js",
-    "build": "npm run build:clean && cross-env APP_ENV=production NODE_ENV=production webpack --progress --config ./webpack.prod.js",
+    "build:local": "yarn run build:clean && cross-env APP_ENV=local NODE_ENV=production webpack --config ./webpack.prod.local.js",
+    "build:dev": "yarn run build:clean && cross-env APP_ENV=staging NODE_ENV=production webpack --config ./webpack.prod.js",
+    "build:sw": "yarn run build:clean && cross-env APP_ENV=production NODE_ENV=production webpack --config ./webpack.prod.sw.js",
+    "build": "yarn run build:clean && cross-env APP_ENV=production NODE_ENV=production webpack --progress --config ./webpack.prod.js",
     "serve:dev": "NODE_ENV=development nodemon ./packages/server/index.js",
     "serve": "NODE_ENV=production node ./packages/server/index.js",
-    "mocking": "yarn json-server -p 3001 --watch ./packages/mocking/db.js"
+    "mocking": "yarn json-server --watch ./packages/mocking/db.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.0",
-    "@babel/core": "^7.8.4",
+    "@babel/core": "7.9.0",
     "@babel/node": "^7.6.1",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-export-default-from": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-arrow-functions": "^7.2.0",
-    "@babel/plugin-transform-block-scoping": "^7.4.0",
-    "@babel/plugin-transform-react-jsx": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/polyfill": "^7.4.3",
-    "@babel/preset-env": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/plugin-proposal-export-default-from": "7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "7.9.0",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/plugin-transform-arrow-functions": "7.8.3",
+    "@babel/plugin-transform-block-scoping": "7.8.3",
+    "@babel/plugin-transform-react-jsx": "7.9.4",
+    "@babel/plugin-transform-runtime": "7.9.0",
+    "@babel/polyfill": "7.8.7",
+    "@babel/preset-env": "7.9.0",
     "@babel/preset-es2015": "^7.0.0-beta.53",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/preset-stage-0": "^7.0.0",
-    "@babel/register": "^7.6.0",
-    "@babel/runtime": "^7.8.4",
+    "@babel/preset-react": "7.9.4",
+    "@babel/preset-stage-0": "7.8.3",
+    "@babel/register": "7.9.0",
+    "@babel/runtime": "7.9.2",
     "babel-eslint": "^10.0.2",
     "babel-jest": "~23.4.2",
-    "babel-loader": "^8.0.0-beta",
+    "babel-loader": "8.1.0",
     "babel-plugin-dynamic-import-node": "^2.3.0",
     "babel-plugin-import": "^1.12.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -111,6 +111,7 @@
     "antd": "^3.5.3",
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
+    "compression-webpack-plugin": "^3.1.0",
     "core-js": "^3.2.1",
     "cross-env": "^5.1.4",
     "d3-dsv": "^1.0.8",
@@ -153,6 +154,7 @@
     "redux-thunk": "^2.2.0",
     "reqwest": "^2.0.5",
     "rxjs": "^6.3.2",
+    "shrink-ray-current": "^4.1.2",
     "styled-components": "^4.3.2"
   },
   "repository": "https://github.com/QasirID/Qasir-React-Boilerplate"
