--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -13,6 +13,10 @@
     "express": "^4.17.1",
     "next": "latest",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "styled-components": "^5.1.0"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.10.7"
   }
 }
