--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -3,15 +3,22 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
-    "build": "next build",
+    "dev": "cross-env NODE_OPTIONS=\"-r esm\" node server.js",
+    "build": "cross-env NODE_OPTIONS=\"-r esm\" next build",
     "start": "cross-env NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.1.0",
+    "@next/bundle-analyzer": "^9.3.6",
+    "antd": "^4.2.0",
+    "babel-plugin-import": "^1.13.0",
     "body-parser": "^1.19.0",
     "cross-env": "^7.0.2",
+    "dayjs": "^1.8.26",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "next": "latest",
+    "postcss-preset-env": "^6.7.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-components": "^5.1.0"
