--- a/mobile/.babelrc
+++ b/mobile/.babelrc
@@ -1,23 +1,12 @@
 {
   "presets": ["next/babel"],
   "plugins": [
-    ["styled-components", { "ssr": true }],
     [
       "import",
       {
-        "libraryName": "antd",
-        "libraryDirectory": "es",
-        "style": "index.css"
+        "libraryName": "antd-mobile",
+        "style": "css"
       }
-    ],
-    [
-      "import",
-      {
-        "libraryName": "@ant-design/icons",
-        "libraryDirectory": "es/icons",
-        "camel2DashComponentName": false
-      },
-      "@ant-design/icons"
     ]
   ]
 }
