--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,8 +8,8 @@
     "start": "cross-env NODE_ENV=production node server.js"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cross-env": "^7.0.2",
+    "@zeit/next-css": "^1.0.1",
+    "antd-mobile": "^2.3.1",
     "express": "^4.17.1",
     "next": "latest",
     "react": "^16.13.1",
@@ -17,6 +17,11 @@
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.10.7"
+    "@next/bundle-analyzer": "^9.3.6",
+    "babel-plugin-import": "^1.13.0",
+    "babel-plugin-styled-components": "^1.10.7",
+    "body-parser": "^1.19.0",
+    "cross-env": "^7.0.2",
+    "null-loader": "^4.0.0"
   }
 }
