--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -6,7 +6,9 @@
     "dev": "cross-env NODE_OPTIONS=\"-r esm\" node server.js",
     "build": "cross-env NODE_OPTIONS=\"-r esm\" next build",
     "analyze": "cross-env-shell NODE_OPTIONS=\"-r esm\" ANALYZE=true next build",
-    "start": "cross-env NODE_ENV=production node server.js"
+    "start": "cross-env NODE_ENV=production node server.js",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
@@ -25,6 +27,12 @@
     "body-parser": "^1.19.0",
     "cross-env": "^7.0.2",
     "esm": "^3.2.25",
-    "postcss-preset-env": "^6.7.0"
+    "postcss-preset-env": "^6.7.0",
+    "@testing-library/jest-dom": "^5.1.0",
+    "@testing-library/react": "^9.4.0",
+    "babel-jest": "^25.1.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^25.1.0",
+    "react-test-renderer": "^16.12.0"
   }
 }
