--- a/mobile/package.json
+++ b/mobile/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production node server.js"
+    "start": "cross-env NODE_ENV=production node server.js",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
@@ -22,6 +24,12 @@
     "babel-plugin-styled-components": "^1.10.7",
     "body-parser": "^1.19.0",
     "cross-env": "^7.0.2",
-    "null-loader": "^4.0.0"
+    "null-loader": "^4.0.0",
+    "@testing-library/jest-dom": "^5.1.0",
+    "@testing-library/react": "^9.4.0",
+    "babel-jest": "^25.1.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^25.1.0",
+    "react-test-renderer": "^16.12.0"
   }
 }
