--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -22,17 +22,18 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^9.3.6",
+    "@testing-library/jest-dom": "^5.1.0",
+    "@testing-library/react": "^9.4.0",
+    "babel-jest": "^25.1.0",
     "babel-plugin-import": "^1.13.0",
+    "babel-plugin-inline-react-svg": "^1.1.1",
     "babel-plugin-styled-components": "^1.10.7",
     "body-parser": "^1.19.0",
     "cross-env": "^7.0.2",
     "esm": "^3.2.25",
-    "postcss-preset-env": "^6.7.0",
-    "@testing-library/jest-dom": "^5.1.0",
-    "@testing-library/react": "^9.4.0",
-    "babel-jest": "^25.1.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
+    "postcss-preset-env": "^6.7.0",
     "react-test-renderer": "^16.12.0"
   }
 }
