--- a/js/dashboard/package.json
+++ b/js/dashboard/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.8.26",
     "express": "^4.17.1",
     "next": "latest",
+    "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-components": "^5.1.0"
