--- a/js/dashboard/package.json
+++ b/js/dashboard/package.json
@@ -32,6 +32,7 @@
     "babel-plugin-styled-components": "^1.10.7",
     "body-parser": "^1.19.0",
     "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
