--- a/js/dashboard/.env-example
+++ b/js/dashboard/.env-example
@@ -1,5 +1,5 @@
 ## Application ##
-APP_ENV=production
-APP_PORT=3005
-NODE_ENV=production
-API_HOST=https://localhost
+NEXT_PUBLIC_APP_ENV=production
+NEXT_PUBLIC_APP_PORT=3005
+NEXT_PUBLIC_NODE_ENV=production
+NEXT_PUBLIC_API_HOST=https://localhost
