--- a/js/dashboard/package.json
+++ b/js/dashboard/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "next": "latest",
     "nprogress": "^0.2.0",
+    "qasir": "^0.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-components": "^5.1.0"
