--- a/js/dashboard/.env-example
+++ b/js/dashboard/.env-example
@@ -1,5 +1,4 @@
 ## Application ##
-NEXT_PUBLIC_APP_ENV=production
-NEXT_PUBLIC_APP_PORT=3005
-NEXT_PUBLIC_NODE_ENV=production
-NEXT_PUBLIC_API_HOST=https://localhost
+NEXT_PUBLIC_APP_ENV = development
+NEXT_PUBLIC_APP_PORT = 3000
+NEXT_PUBLIC_API_HOST = https://localhost
